Menu bar no longer interferes with clicks by covering the screen.

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
     cursor: default;
 
     position: absolute;
-    overflow: hidden;
+
     height: 95%;
     width: 100%;
+    
+    pointer-events: none;
     
     /* Cross-browser disable text selection. */
     user-select: none;
@@ -30,6 +32,7 @@
     padding: 0.5em;
     margin: 0;
     text-decoration: none;
+    pointer-events: auto;
 }
 
 .menu-item:hover {
@@ -102,7 +105,6 @@ Needed since z-index does not appear to work with css transitions.
     background-color: slategray;
     padding: 1em;
     width: 13em;
-    overflow: hidden;
     position: absolute;
 }
 
